release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.6.1
-------------
Bug fixes
 - Fix handling of absolute paths for tool definition files
 
Features
 - Implement tool tag "search_path" attribute
 - Implement pipeline "tool_search_path" attribute
 - Don't ssh to head node to send pipeline completion email (was a work around
   for genome cluster config)

Version 1.6.0
-------------
Bug fixes
 - Fix exception in abort_submit()
 - Fix civet_status so it doesn't show terminated jobs as canceled
 - Fix bug in filelist in_dir processing
 - Fix exception when referencing inputs and outputs that don't exist in tool
   xml
 - Fix anonymous temp dir creation

Features
 - Add new <version directory=""/> pipeline tag that lets pipeline developer
   specify new output directory naming scheme (to guarantee unique output 
   directory for each run)
 - Add new error_email_address parameter to parse_XML, used by abort_pipeline
   Bash function to email the user when a pipeline is aborted. Also used for 
   batch system abort emails. Can be passe to civet_run with
   --error-email-address option
 - Cleanup some Unicode characters from command line (problem when example
   command lines are copy and pasted from Word Processors or email clients)


Version 1.5.0
-------------
Bug fixes
 - Fix crash for non-zero pbs_deljob return value in civet_cancel 
 - Fix crash when options file contains blank lines

Features
 - Initial <foreach> implementation
 - Delayed job execution (civet_run -d, --delay)
 - Can specify email list for batch notification (civet_run -e, --email-address)
 - Use pipeline tool names instead of name from tool definition file (allows
   multiple instances of same tool in pipeline to have unique names for job and
   file naming)


Version 1.4.2
-------------
Bug fixes
 - Fix crash in civet_status
 - Fix typo in civet_status output