@@ -12,6 +12,7 @@ Bug fixes
 Features
  - Implement tool tag "search_path" attribute
  - Implement pipeline "tool_search_path" attribute
+ - Implement new --walltime-multiplier option to civet_run
  - Don't ssh to head node to send pipeline completion email (was a work around
    for genome cluster config)
 
